update nav link style so that no longer flickers while hover

--- a/src/components/BoardNavigation/NavMain/NavMain.module.scss
+++ b/src/components/BoardNavigation/NavMain/NavMain.module.scss
@@ -81,11 +81,11 @@
       flex-direction: column;
       gap: 0.5rem;
 
-      a {
+      .navLink {
         right: 1%;
         display: flex;
         flex-direction: row;
-        border-radius: 4px;
+        border-radius: 10px;
         text-decoration: inherit;
         outline: 0px;
         border: 0px;
@@ -124,7 +124,6 @@
         }
 
         &:hover {
-          position: relative;
           background-color: var(--ds-background-selected, #e6effc);
           color: var(--ds-text-selected, #0052cc);
         }
